Use Unsafe to bypass needing add-opens